--- a/package.json
+++ b/package.json
@@ -7,9 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
+    "@mdi/font": "^3.6.95",
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "roboto-fontface": "*",
+    "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.1.5",
+    "vuetify": "^2.2.11",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
@@ -17,6 +25,7 @@
     "@vue/cli-plugin-router": "~4.2.0",
     "@vue/cli-plugin-vuex": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
+    "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-template-compiler": "^2.6.11"
   }
 }
